$Id: NEWS,v 1.155 2002-02-28 19:30:01 flood Exp $

1.2.5rc2 - CVS
---------------------------------
- New mod_wrap (1.2.3)
- removed contrib/genuser.pl (per TJ)
- added contrib/ftpasswd utility script (contributed by TJ)
- Bug 1318 - sendfile() semantics incorrect under Linux
- Bug 1450 - Timers removed immediately/alarm() return no longer used for
             timing
- Bug 1446 - DefaultServer overrides SocketBindTight
- Bug 1378 - Replace alloca stuff in glibc-glob.c with something more standard
- Bug 1498 - <Limit LOGIN> block failing with mod_ldap
- Bug 1381 - include/glibc-glob.h fix for Tru64 UNIX
- Bug 1465 - can't bind to port that hasn't been closed by forked child
             process
- Bug 1379 - replace bzero/bcopy with memset/memcpy
- Bug 1476 - doc updates
- Bug 1520 - security checks for TransferLogs
- Bug 1435 - AccessDenyMsg for <Anonymous> not working
- Bug 1492 - Bad interaction between HiddenStor and UserOwner
- Bug 1493 - incorrect parsing of AuthUserFile
- Bug 1485 - Adds CF_MERGEDOWN_MULTI config_rec flag
- Bug 1459 - server fails to send response in some cases
- Bug 1533 - use memset correctly
- Bug 1517 - doc update
- Bug 1461 - modules/mod_unixpw.c pw_getgroups() makes dangerous assumption
- Bug 1512 - Minor credentials cleanups
- Bug 1516 - wrong response to CDUP/XCUP/XCWD
- Bug 1451 - add_config_param_str() no longer uses permanent_pool
- Bug 1523 - umask allocation in <Global> moved to permanent_pool
- Bug 1380 - updated getopt library for Tru64/AIX

1.2.5rc1 - Released 12/18/2001
---------------------------------
- New mod_sql (4.07)
- New mod_wrap (1.2.2)
- New mod_ldap (2.8.1)
- New Directive: UseGlobbing, allows glibc-based filepath globbing
  to be disabled.
- Bug 1113 - Make.rules for HPUX incorrectly generated
- Bug 1334 - (should have been in 1.2.4, but was missed somehow)
             MaxClients none in VirtualHost forbids connect
- Bug 1368 - umask bug is hopefully squashed for good
- Bug 1389 - fixed hang on PWD